Home page alignmenet fixed

--- a/cricket/src/index.css
+++ b/cricket/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 
-root{
-    background-color: #F6FDFE;
+:root{
+    background-color: #F3F4F6;
 }
